--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,8 @@
 
   /* Official Finance4Her Brand Colors */
   --brand-pink: #df44a6;
+  --brand-lightpink: #fbd8ee;
+  --brand-backgroundpink: #ffeffb;
   --brand-limegreen: #ccf281;
   --brand-orange: #e89f56;
   --brand-lilac: #ba92e8;
@@ -95,7 +97,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: var(--font-primary);
-  background-color: var(--color-bg-secondary);
+  background-color: var(--brand-backgroundpink);
 }
 
 body {
@@ -135,7 +137,7 @@ body {
   width: 100%;
   height: 80px;
   padding: 0;
-  background-color: var(--brand-indigo);
+  background-color: var(--brand-orange);
   color: var(--brand-offwhite);
   display: flex;
   align-items: center;
